--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script src="./class_work.js"></script> -->
-    <script src="./add_numbers.js"></script>
+    <script src="./my_bind.js"></script>
     <title>Document</title>
 </head>
 <body>
